cmake_minimum_required(VERSION 3.24)
project(BOJ)

set(CMAKE_CXX_STANDARD 14)

#add_executable(BOJ Sorting/24173_Heap_sort_1.cpp)
#add_executable(BOJ Recommended/Implementation/20207_calander.cpp)
#add_executable(BOJ Recommended/Implementation/class_1.cpp)
add_executable(BOJ DataStructure/9012_parenthesis.cpp)

