cmake_minimum_required(VERSION 3.24)
project(BOJ)

set(CMAKE_CXX_STANDARD 14)

#add_executable(BOJ Sorting/24173_Heap_sort_1.cpp)
#add_executable(BOJ Recommended/Implementation/22856_tree_traverse_ver2.cpp)
add_executable(BOJ Recommended/DataStructure/1874_stack_sequence.cpp)
#add_executable(BOJ Recommended/Class3/1003_fibobacci.cpp)

