cmake_minimum_required(VERSION 3.24)
project(BOJ)

set(CMAKE_CXX_STANDARD 14)

#add_executable(BOJ Sorting/24173_Heap_sort_1.cpp)
#add_executable(BOJ Recommended/Implementation/22856_tree_traverse_ver2.cpp)
#add_executable(BOJ Recommended/DataStructure2/2075_Nth_largest_num.cpp)
#add_executable(BOJ Recommended/Math/9613_sum_of_GCD.cpp)
add_executable(BOJ Recommended/Tree/17073_raindrop_on_the_tree.cpp)
#add_executable(BOJ Recommended/class_1.cpp)

